# paper_amgcl_reuse

./: CMakeLists.txt  LICENSE.md  README.md  amgcl_reuse.tex  ref.bib  reuse.tex  spmpsci.bst
data/: .gitignore  CMakeLists.txt  full.cpp  full_b4.cpp  make_plots.ipynb  reuse.cpp  reuse_b4.cpp  run_benchmarks.sh
data/3d_dambreak_case_100K/: 3d_dambreak_case_100K.post.lst  FluidMaterials.json  ProjectParameters.json  report.ipynb
data/3d_dambreak_case_100K/large/: cpu-0-full.time  cpu-0-none.time  cpu-0-part-20.time  cpu-0-part.time  cpu-full.time  cpu-part.time  gpu-0-full.time  gpu-0-none.time  gpu-0-part-20.time  gpu-0-part.time  gpu-full.time  gpu-part.time  run_benchmarks.sh  single-cpu.profile  single-gpu.profile
data/3d_dambreak_case_100K/small/: cpu-0-full.time  cpu-0-none.time  cpu-0-part-20.time  cpu-0-part.time  cpu-2-full.time  cpu-2-none.time  cpu-2-part-20.time  cpu-2-part.time  gpu-0-full.time  gpu-0-none.time  gpu-0-part-20.time  gpu-0-part.time  gpu-2-full.time  gpu-2-none.time  gpu-2-part-20.time  gpu-2-part.time  run_benchmarks.sh  single-cpu.profile  single-gpu.profile
